# mk-tools

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_SETUP.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: QUICK_REFERENCE.md  SUMMARY.md  spec.md
examples/: add-toc-example.md  cross-file-toc-example.md  example.md  hello.rs
src/: cli.rs  logging.rs  main.rs
src/domain/: codeblock.rs  mod.rs  toc.rs
src/fs/: mod.rs  path_utils.rs
src/markdown/: codeblocks.rs  mod.rs  toc.rs
